# mdflare

./: .gitignore  DEV.md  HANDOVER.md  LICENSE  README.md  builds.json  deploy.sh  package-lock.json  package.json
.github/workflows/: auto-merge.yml  build.yml  deploy.yml
agent/: Cargo.toml  build.rs  deploy.sh  install.command  install.sh
agent-rust/: Cargo.toml
agent-rust/src/: main.rs
agent/MDFlareAgent/: project.yml
agent/MDFlareAgent/Sources/: Info.plist  main.swift
agent/macos/: AppIcon.icns  Info.plist
agent/src/: cloud.rs  config.rs  local_fs.rs  main.rs  private_vault.rs  sync.rs  tray.rs  types.rs
docs/: ARCHITECTURE.md  SECURITY-REDESIGN.md  WINDOWS-AGENT-HANDOVER.md  sync-sequences-mermaid.md  sync-sequences.md
scripts/: bump-patch.sh  check-api-parity.sh  deploy-local-web.sh  deploy-web.sh  release-all.sh  release-mac.sh  run-agent.sh
server/: index.js
test-vault/: welcome.md
test-vault/ideas/: mdflare-roadmap.md
web/: index.html  package-lock.json  package.json  vite.config.js
web/functions/_tunnel/: [[path]].js
web/functions/api/[userId]/: _middleware.js  agent-status.js  files.js  rename.js
web/functions/api/[userId]/file/: [[path]].js
web/functions/api/token/: agent.js  generate.js
web/functions/api/tunnel/: [[path]].js
web/functions/api/username/: check.js  register.js
web/functions/lib/: auth.js
web/src/: App.jsx  firebase.js  style.css
web/src/components/: AgentStatus.jsx  AppTitle.jsx
web/src/pages/: AgentAuth.jsx  Download.jsx  Landing.jsx  SetUsername.jsx  Workspace.jsx
