[package]
name = "mdflare-agent"
version = "1.0.6"
edition = "2021"
description = "MDFlare sync agent for Windows/macOS/Linux"
authors = ["MDFlare"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP 서버 (Private Vault)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP 클라이언트
reqwest = { version = "0.12", features = ["json", "blocking"] }

# JSON 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL 파싱
url = "2.5"
urlencoding = "2.1"

# 파일 감시
notify = "7.0"
notify-debouncer-mini = "0.5"

# 설정 파일 경로
directories = "5.0"

# 브라우저 열기
open = "5.0"

# 로깅
log = "0.4"
env_logger = "0.11"

# 시간 처리
chrono = { version = "0.4", features = ["serde"] }

# Base64 인코딩
base64 = "0.22"

# 터널링: localtunnel (npx로 외부 실행)

# 파일 시스템 탐색
walkdir = "2.5"
dirs = "5.0"

# 폴더 선택 다이얼로그
rfd = "0.15"

# 크로스플랫폼 트레이
tao = "0.30"
tray-icon = "0.17"
muda = "0.14"             # 메뉴
wry = "0.44"              # 웹뷰 (모드 선택 다이얼로그)
similar = "2.6"           # diff 생성/적용

# Windows 전용 (URL scheme 등록)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
